tests/language_modules/02_import/invalid_semantics/self_import.vf
module App.Main

import App.Main

procedure main()
is
    check true
end main

end App.Main